화요나들이 투어 소개화면 클래스 정리

--- a/introduceTues.html
+++ b/introduceTues.html
@@ -145,29 +145,23 @@
     <p><span style="color: #ba202a; font-weight: bold;">화요나들이</span><span>&nbsp;코스안내</span></p>
   </div>
   <div class="container">
-    <div class="map_wrap_x" style="position: relative; margin: 0 auto 20px auto; background: rgba(26, 55, 77, 0.05);">
-      <div class="map_tab_wrap_x map_tab_wrap1_x noprint" style="position: absolute; width:304px; 
-      height: 29px; display:table; right: 10px; top:-29px;
-      background: url(images/map_tap.png) no-repeat center top;">
-        <p class="map1_x" style="color: #fff; padding-top: 8px; width: 50%; float: left;
-        display: table-cell; cursor: pointer; text-align: center; margin: 0;">
+    <div class="map_wrap">
+      <div class="map_tab_wrap" style="background: url(images/map_tap.png) no-repeat center top;">
+        <p class="map_tab_1">
           <a href="#" style="color: #fff; padding-left: 30px; background: transparent;
           cursor: pointer; text-decoration: none;">MAP으로 보기</a>
         </p>
-        <p class="map2_x" style="color: #444; padding-top: 8px; width: 50%; float: left;
-        display: table-cell; cursor: pointer; text-align: center; margin: 0;">
+        <p class="map_tab_2">
           <a href="#" style="color: #444; padding-right: 10px; background:transparent;
           cursor:pointer; text-decoration: none;">LIST로 보기</a>
         </p>
       </div>
-        <div class="map_frame_x" style="width: 830px; height:500px; border:1px solid #aaa;
-        background:url(images/맵.JPG) no-repeat center; background-size: cover;
-        display:block; margin: auto;">
+        <div class="map_frame" style="background:url(images/맵.JPG) no-repeat center; background-size: cover;">
       </div>
-      <div class="map_frame_course_x">
+      <div>
         <p style="color: #f00; font-weight: bold; margin: 30px 0;">(관광지를 클릭하시면 세부 정보를 확인할 수 있습니다.)</p>
       </div>
-      <div class="map/frame_course_table_x" style="padding-bottom: 30px;">
+      <div style="padding-bottom: 30px;">
         <table border="0" width="1110px">
           <tbody align="center">
             <tr>
