--- a/introduceTues.html
+++ b/introduceTues.html
@@ -156,7 +156,7 @@
           cursor:pointer; text-decoration: none;">LIST로 보기</a>
         </p>
       </div>
-        <div class="map_frame" style="background:url(images/맵.JPG) no-repeat center; background-size: cover;">
+      <div class="map_frame" style="background:url(images/맵.JPG) no-repeat center; background-size: cover;">
       </div>
       <div>
         <p style="color: #f00; font-weight: bold; margin: 30px 0;">(관광지를 클릭하시면 세부 정보를 확인할 수 있습니다.)</p>
@@ -186,17 +186,17 @@
             <tr>
               <td>고양관광정보센터</td>
               <td><a href="#">
-                <span style="text-decoration: underline; color: #003399;">
-                  중남미문화원</span></a></td>
+                  <span style="text-decoration: underline; color: #003399;">
+                    중남미문화원</span></a></td>
               <td><a href="#">
-                <span style="text-decoration: underline; color: #003399;">
-                  중식 타코체험/체험비 별도</span></a></td>
+                  <span style="text-decoration: underline; color: #003399;">
+                    중식 타코체험/체험비 별도</span></a></td>
               <td><a href="#">
-                <span style="text-decoration: underline; color: #003399;">
-                고양향교, 벽제관지(경유)</span></a></td>
+                  <span style="text-decoration: underline; color: #003399;">
+                    고양향교, 벽제관지(경유)</span></a></td>
               <td><a href="#">
-                <span style="text-decoration: underline; color: #003399;">
-                최영장군묘</span></a></td>
+                  <span style="text-decoration: underline; color: #003399;">
+                    최영장군묘</span></a></td>
               <td>고양관광정보센터</td>
             </tr>
           </tbody>
@@ -205,160 +205,63 @@
     </div>
   </div>
 
-  <div class="untree_co-section">
-    <div class="container">
-      <div class="row align-items-stretch">
-        <div class="order-lg-1">
-          <!--         <div class="col-lg-4 order-lg-1"> -->
-          <div class="h-100">
-            <div class="frame h-100">
-              <div class="feature-img-bg h-100"
-                style="background-image: url('images/버스사진.jpg'); background-size: contain;"></div>
-            </div>
-          </div>
-          <!--           <div class="h-100"><div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('images/버스사진.jpg'); "></div></div></div> -->
-        </div>
-
-        <div class="col-6 col-sm-6 feature-1-wrap d-md-flex flex-md-column order-lg-1">
-          <!--         <div class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-1" > -->
-
-          <div class="feature-1 p-introduce">
-            <!-- <div class="feature-1 d-md-flex p-introduce"> -->
-            <div class="align-self-center">
-              <span class="text-primary"></span>
-              <!--               <span class="flaticon-house display-4 text-primary"></span> -->
-              <h3 class="p-text-align-tour" style="margin-bottom: 12px;">
-                <b>고양 시티투어 운영안내</b>
-              </h3>
-              <p style="margin-bottom: 8px;"><b>● 운행요일 : </b>화~일 (월요일 정기휴무)</p>
-              <!-- <p class="mb-0"><b>● 운행요일 : </b>화~일 (월요일 정기휴무)</p> -->
-              <p style="margin-bottom: 8px;"><b>● 시간 : </b>10:00 ~ 16:00</p>
-              <p style="margin-bottom: 8px;"><b>● 탑승장소 : </b>경기도 고양시 일산동구 장항동<br>
-                &nbsp;(정발산역 2번 출구)</p>
-              <p style="margin-bottom: 8px;"><b>● 요금표</b></p>
-              <div style="display: flex; justify-content: center;">
-                <table border="1" cellspacin="0">
-                  <thead bgcolor="#dcdcdc" align="center" style="font-weight: bold;">
-                    <tr>
-                      <td>성인</td>
-                      <td>기타</td>
-                      <td>무료</td>
-                    </tr>
-                  </thead>
-                  <tbody align="center">
-                    <tr>
-                      <td width="80px">6,000원</td>
-                      <td width="80px">4,000원</td>
-                      <td width="120px">경로,장애인,<br>유치원~초중고,<br>36개월 미만</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <div style="display: flex; justify-content: center;">
-                <table>
-                  <tr style="color:#16A085;">
-                    <td colspan="3" style="font-weight:bold;">※ 입장료,체험비,중식비는 별도</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-          </div>
-
-          <!--       <div class="feature-1 ">
-            <div class="align-self-center">
-              <span class="flaticon-restaurant display-4 text-primary"></span>
-              <h3>Restaurants & Cafe</h3>
-              <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
-            </div>
-          </div> -->
-
-        </div>
-
-        <!--         <div class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-3" >
-
-          <div class="feature-1 d-md-flex">
-            <div class="align-self-center">
-              <span class="flaticon-mail display-4 text-primary"></span>
-              <h3>Easy to Connect</h3>
-              <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
-            </div>
-          </div>
-
-          <div class="feature-1 d-md-flex">
-            <div class="align-self-center">
-              <span class="flaticon-phone-call display-4 text-primary"></span>
-              <h3>24/7 Support</h3>
-              <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
-            </div>
-          </div>
-
-        </div> -->
-
+  <div class="container" style="padding-bottom: 20px;">
+    <div class="row justify-content-center">
+      <p style="margin: 0; padding-top: 20px; font-weight: bold; font-size: 20px;">(기본) 탑승료</p>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-lg-6 text-center">
+        <h2 class="section-title text-center mb-3"></h2>
       </div>
     </div>
   </div>
 
-  <!-- 도희 코드 수정 전  -->
-  <!--      <div class="untree_co-section">
-      <div class="container">
-      <div class="row align-items-stretch">
-        <div class="col-lg-4 order-lg-1">
-          <div class="h-100"><div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('images/버스사진.jpg');"></div></div></div>
-        </div>
-
-        <div class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-1" >
-
-          <div class="feature-1 d-md-flex">
-            <div class="align-self-center">
-              <span class="flaticon-house display-4 text-primary"></span>
-              <h3>Beautiful Condo</h3>
-              <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
-            </div>
-          </div>
-
-          <div class="feature-1 ">
-            <div class="align-self-center">
-              <span class="flaticon-restaurant display-4 text-primary"></span>
-              <h3>Restaurants & Cafe</h3>
-              <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-3" >
-
-          <div class="feature-1 d-md-flex">
-            <div class="align-self-center">
-              <span class="flaticon-mail display-4 text-primary"></span>
-              <h3>Easy to Connect</h3>
-              <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
-            </div>
-          </div>
-
-          <div class="feature-1 d-md-flex">
-            <div class="align-self-center">
-              <span class="flaticon-phone-call display-4 text-primary"></span>
-              <h3>24/7 Support</h3>
-              <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
+  <div class="container" style="padding-bottom: 50px;">
+    <div class="row justify-content-center">
+      <table border="1" cellspacin="0">
+        <thead bgcolor="#dcdcdc" align="center" style="font-weight: bold;">
+          <tr>
+            <td>성인</td>
+            <td>기타</td>
+            <td>무료</td>
+          </tr>
+        </thead>
+        <tbody align="center">
+          <tr>
+            <td width="200px">6,000원</td>
+            <td width="200px">4,000원</td>
+            <td width="200px">경로,장애인,<br>유치원~초중고,36개월 미만</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
-    </div> -->
 
+  <div class="container" style="padding-bottom: 50px;">
+    <div class="row justify-content-center">
+      <p style="font-size: 16px; font-weight: bold;">※ 예약을 하시려면 하단의 투어예약 버튼을 눌러주세요</p>
+    </div>
+  </div>
 
-  <div class="py-5 cta-section">
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-md-12">
-          <h2 class="mb-2 text-white">고양이 궁금한 당신, 지금 바로 예약하세요!</h2>
-          <p class="mb-4 lead text-white text-white-opacity">고양시 시티투어는 요일마다 특색있게 운영됩니다.</p>
-          <p class="mb-0"><a href="booking.html"
-              class="btn btn-outline-white text-white btn-md font-weight-bold">예약하기</a></p>
+  <div class="container">
+    <div style="background: rgba(26, 55, 77, 0.05);">
+      <div style="padding: 20px; display: flex; flex-direction: row;
+      justify-content: space-evenly; align-items: center;">
+        <iframe width="350" height="250" src="https://www.youtube.com/embed/pdBJjNjkZpM" title="YouTube video player"
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+       picture-in-picture" allowfullscreen></iframe>
+        <div style="padding: 20px; text-align: center; padding-top: 80px;">
+          <p style="font-size: 1.75rem; font-weight: bold;">지금 바로 떠나세요!</p>
+          <br>
+          <p class="mb-0">
+            <a href="#" class="btn btn-outline-white text-white btn-md font-weight-bold"
+              style="background-color: #888888;">
+              투어예약
+            </a>
+          </p>
+        </div>
+        <div>
+          <img src="images/버스사진.jpg" width="350" height="250">
         </div>
       </div>
     </div>
