투어 소개 샘플 화면 완성

--- a/introduceTour.html
+++ b/introduceTour.html
@@ -124,12 +124,12 @@
      <!-- 도희 -->
         <ul class="list_sub_menu">
           <li class="_sub">
-            <a href="">
+            <a href="introduceTour.html">
                 <span>시티 투어 코스</span>
             </a>
           </li>
           <li class="_sub">
-            <a  href="">
+            <a  href="introduceTues.html">
                 <span >화요나들이</span>
             </a>
           </li>
@@ -167,11 +167,11 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1">
            <div class="img-align">
-            <a href="#" class="d-block mb-3"><img src="images/중남미문화원.jpg" alt="Image" class="img-fluid"></a>
+            <a href="introduceTues.html" class="d-block mb-3"><img src="images/중남미문화원.jpg" alt="Image" class="img-fluid"></a>
             </div>
             <div class="d-flex">
               <div>
-                <h3 class="p-text-align"><a href="#"><b>화요나들이 (벽제)</b></a></h3>
+                <h3 class="p-text-align"><a href="introduceTues.html"><b>화요나들이 (벽제)</b></a></h3>
                 <p class="p-text-align">10:00 ~ 16:00</p>
                 <p class="p-text-align">고양에서 즐기는 또 다른 문화여행</p>
                 <p class="p-text-align-size"><b>6천원/4천원</b></p>
