--- a/introduceTues_list.html
+++ b/introduceTues_list.html
@@ -146,62 +146,69 @@
   </div>
   <div class="container">
     <div class="map_wrap">
-      <div class="map_tab_wrap" style="background: url(images/map_tap.png) no-repeat center top;">
+      <div class="map_tab_wrap" style="background: url(images/map_tap_2.png) no-repeat center top;">
         <p class="map_tab_1">
-          <a href="introduceTues.html" style="color: #fff; padding-left: 30px; background: transparent;
+          <a href="introduceTues.html" style="color: #444; padding-left: 30px; background: transparent;
           ">MAP으로 보기</a>
         </p>
         <p class="map_tab_2">
-          <a href="introduceTues_list.html" style="color: #444; padding-right: 10px; background:transparent;
+          <a href="introduceTues_list.html" style="color: #fff; padding-right: 10px; background:transparent;
           ">LIST로 보기</a>
         </p>
       </div>
-      <div class="map_frame" style="background:url(images/맵.JPG) no-repeat center; background-size: cover;">
-      </div>
-      <div>
-        <p style="color: #f00; font-weight: bold; margin: 30px 0;">(관광지를 클릭하시면 세부 정보를 확인할 수 있습니다.)</p>
-      </div>
-      <div style="padding-bottom: 30px;">
-        <table border="0" width="1110px">
+      <div style="display: flex; justify-content: center; padding: 100px 0 100px 0;">
+        <table border="1">
+          <thead align="center" height="40px" bgcolor="#dcdcdc">
+            <tr>
+              <th width="100px">순번</th>
+              <th width="300px">경유지명/ 내용</th>
+              <th width="300px">시간</th>
+            </tr>
+          </thead>
           <tbody align="center">
-            <tr>
-              <td rowspan="3" style="width:80px; height: 40px;
-              border-radius: 50%; background: #f2cb61; font-size: 20px; font-weight: bold;
-              text-align: center;">화</td>
-              <td style="color: #f2cb61; font-weight: bold;">10:00</td>
-              <td style="color: #f2cb61; font-weight: bold;">11:00 ~ 12:00</td>
-              <td style="color: #f2cb61; font-weight: bold;">12:00 ~ 13:00</td>
-              <td style="color: #f2cb61; font-weight: bold;">13:00 ~ 14:00</td>
-              <td style="color: #f2cb61; font-weight: bold;">14:30 ~ 15:30</td>
-              <td style="color: #f2cb61; font-weight: bold;">16:00</td>
+            <tr height="40px">
+              <td>1</td>
+              <td>고양관광정보센터 둘러보기</td>
+              <td>10:00 ~ 10:30</td>
             </tr>
-            <tr style="border-bottom: 1px solid #444;">
-              <td><img src="images/circle_Tues_sub_1.png"></td>
-              <td><img src="images/circle_Tues_sub_2.png"></td>
-              <td><img src="images/circle_Tues_sub_3.png"></td>
-              <td><img src="images/circle_Tues_sub_4.png"></td>
-              <td><img src="images/circle_Tues_sub_5.png"></td>
-              <td><img src="images/circle_Tues_sub_1.png"></td>
+            <tr height="40px">
+              <td>2</td>
+              <td>이동</td>
+              <td>10:30 ~ 11:00</td>
             </tr>
-            <tr>
-              <td>고양관광정보센터</td>
-              <td><a href="introduceTues_d1.html">
-                  <span style="text-decoration: underline; color: #003399;">
-                    중남미문화원</span></a></td>
-              <td><a href="#">
-                  <span style="text-decoration: underline; color: #003399;">
-                    중식 타코체험/체험비 별도</span></a></td>
-              <td><a href="#">
-                  <span style="text-decoration: underline; color: #003399;">
-                    고양향교, 벽제관지(경유)</span></a></td>
-              <td><a href="#">
-                  <span style="text-decoration: underline; color: #003399;">
-                    최영장군묘</span></a></td>
-              <td>고양관광정보센터</td>
+            <tr height="40px">
+              <td>3</td>
+              <td>중남미문화원</td>
+              <td>11:00 ~ 12:00</td>
+            </tr>
+            <tr height="40px">
+              <td>4</td>
+              <td>중식 타코체험 / 체험비 별도</td>
+              <td>12:00 ~ 13:00</td>
+            </tr>
+            <tr height="40px">
+              <td>5</td>
+              <td>고양학교, 벽제관지(경유)</td>
+              <td>13:00 ~ 14:00</td>
+            </tr>
+            <tr height="40px">
+              <td>6</td>
+              <td>이동</td>
+              <td>14:00 ~ 14:30</td>
+            </tr>
+            <tr height="40px">
+              <td>7</td>
+              <td>최영장군묘</td>
+              <td>14:30 ~ 15:30</td>
+            </tr>
+            <tr height="40px">
+              <td>8</td>
+              <td>도착</td>
+              <td>16:00</td>
             </tr>
           </tbody>
         </table>
-      </div>
+        </div>
     </div>
   </div>
 
