관광 소개 화면 완성

--- a/introduceTour.html
+++ b/introduceTour.html
@@ -129,32 +129,32 @@
             </a>
           </li>
           <li class="_sub">
-            <a  href="introduceTues.html">
+            <a  href="introduceDay.html">
                 <span >화요나들이</span>
             </a>
           </li>
           <li class="_sub">
-            <a  href="">
+            <a  href="introduceDay.html">
                 <span>수요나들이</span>
             </a>
           </li>
           <li class="_sub">
-            <a  href="">
+            <a  href="introduceDay.html">
                 <span class="menu_text">목요나들이</span>
             </a>
           </li>
           <li class="_sub">
-            <a  href="">
+            <a  href="introduceDay.html">
                 <span class="menu_text">금요나들이</span>
             </a>
           </li>
           <li class="_sub">
-            <a  href="">
+            <a  href="introduceDay.html">
                 <span>토요나들이</span>
             </a>
           </li>
           <li class="_sub" >
-            <a  href="">
+            <a  href="introduceDay.html">
                 <span>일요나들이</span>
             </a>
           </li>
@@ -167,11 +167,11 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1">
            <div class="img-align">
-            <a href="introduceTues.html" class="d-block mb-3"><img src="images/중남미문화원.jpg" alt="Image" class="img-fluid"></a>
+            <a href="introduceDay.html" class="d-block mb-3"><img src="images/중남미문화원.jpg" alt="Image" class="img-fluid"></a>
             </div>
             <div class="d-flex">
               <div>
-                <h3 class="p-text-align"><a href="introduceTues.html"><b>화요나들이 (벽제)</b></a></h3>
+                <h3 class="p-text-align"><a href="introduceDay.html"><b>화요나들이 (벽제)</b></a></h3>
                 <p class="p-text-align">10:00 ~ 16:00</p>
                 <p class="p-text-align">고양에서 즐기는 또 다른 문화여행</p>
                 <p class="p-text-align-size"><b>6천원/4천원</b></p>
@@ -182,11 +182,11 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1"> 
           <div class="img-align">
-            <a href="#" class="d-block mb-3"><img src="images/행주산성.jpg" alt="Image" class="img-fluid"></a>
+            <a href="introduceDay.html" class="d-block mb-3"><img src="images/행주산성.jpg" alt="Image" class="img-fluid"></a>
            </div>
             <div class="d-flex">
               <div >
-                <h3 class="p-text-align"><a href="#"><b>수요나들이 (행주)</b></a></h3>
+                <h3 class="p-text-align"><a href="introduceDay.html"><b>수요나들이 (행주)</b></a></h3>
                 <p class="p-text-align">10:00 ~ 16:00</p>
                 <p class="p-text-align">행주가 예술이야~</p>
                 <p class="p-text-align-size"><b>6천원/4천원</b></p>
@@ -197,11 +197,11 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1">
           <div class="img-align">
-            <a href="#" class="d-block mb-3"><img src="images/일산역 전시관.png" alt="Image" class="img-fluid"></a>
+            <a href="introduceDay.html" class="d-block mb-3"><img src="images/일산역 전시관.png" alt="Image" class="img-fluid"></a>
             </div>
             <div class="d-flex">
               <div>
-                <h3 class="p-text-align"><a href="#"><b>목요나들이 (일산)</b></a></h3>
+                <h3 class="p-text-align"><a href="introduceDay.html"><b>목요나들이 (일산)</b></a></h3>
                 <p class="p-text-align">10:00 ~ 16:00</p>
                 <p class="p-text-align">추억의 일산여행</p>
                 <p class="p-text-align-size"><b>6천원/4천원</b></p>
@@ -212,11 +212,11 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1">
           <div class="img-align">
-            <a href="#" class="d-block mb-3"><img src="images/모터스튜디오 고양.jpeg" alt="Image" class="img-fluid"></a>
+            <a href="introduceDay.html" class="d-block mb-3"><img src="images/모터스튜디오 고양.jpeg" alt="Image" class="img-fluid"></a>
             </div>
             <div class="d-flex">
               <div>
-                <h3  class="p-text-align"><a href="#"><b>금요나들이 (고양관광특구)</b></a></h3>
+                <h3  class="p-text-align"><a href="introduceDay.html"><b>금요나들이 (고양관광특구)</b></a></h3>
                  <p class="p-text-align">10:00 ~ 16:00</p>
                 <p class="p-text-align">고양관광특구 속으로</p>
                 <p class="p-text-align-size"><b>6천원/4천원</b></p>               
@@ -243,11 +243,11 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1"> 
           <div class="img-align">
-            <a href="#" class="d-block mb-3"><img src="images/서삼릉.jpg" alt="Image" class="img-fluid"></a>
+            <a href="introduceDay.html" class="d-block mb-3"><img src="images/서삼릉.jpg" alt="Image" class="img-fluid"></a>
            </div>
             <div class="d-flex">
               <div >
-                <h3 class="p-text-align"><a href="#"><b>토요나들이 (왕릉)</b></a></h3>
+                <h3 class="p-text-align"><a href="introduceDay.html"><b>토요나들이 (왕릉)</b></a></h3>
                 <p class="p-text-align">10:00 ~ 16:00</p>
                 <p class="p-text-align">고려의 왕릉과 조선의 왕릉</p>
                 <p class="p-text-align">그리고 유네스코 세계문화유산</p>
@@ -259,11 +259,11 @@
 <div class="col-6 col-md-6 col-lg-3">
 <div class="media-1">
           <div class="img-align">
-            <a href="#" class="d-block mb-3"><img src="images/고양생태공원.jpg" alt="Image" class="img-fluid"></a>
+            <a href="introduceDay.html" class="d-block mb-3"><img src="images/고양생태공원.jpg" alt="Image" class="img-fluid"></a>
             </div>
             <div class="d-flex">
               <div>
-                <h3  class="p-text-align"><a href="#"><b>일요나들이 (패밀리)</b></a></h3>
+                <h3  class="p-text-align"><a href="introduceDay.html"><b>일요나들이 (패밀리)</b></a></h3>
                  <p class="p-text-align">10:00 ~ 16:00</p>
                 <p class="p-text-align">주말인데 뭐하지?</p>
                 <p class="p-text-align">아빠~생태공원으로 놀러가요^^</p>
