--- a/introduceDay_map.html
+++ b/introduceDay_map.html
@@ -46,7 +46,6 @@
     </div>
     <div class="site-mobile-menu-body"></div>
   </div>
-
   <nav class="site-nav">
     <div class="container">
       <div class="site-navigation">
@@ -144,7 +143,7 @@
     <h2 class="section-sub-title text-center mb-3"></h2>
     <!-- </div> -->
   </div>
-  <!-- 라인 구분 선 끝-->
+  <!-- 라인 구분 선 -->
 
   <!-- 소제목 -->
   <div class="container">
@@ -166,125 +165,25 @@
           ">LIST로 보기</a>
         </p>
       </div>
-      <div class="map_frame" style="background:url(images/맵.JPG) no-repeat center; background-size: cover;">
-      </div>
       <div>
-        <p style="color: #f00; font-weight: bold; margin: 30px 0;">(관광지를 클릭하시면 세부 정보를 확인할 수 있습니다.)</p>
+        <p style="font-size: 20px; font-weight: bold; padding: 20px 0 0 0;
+        margin: 0;">중남미문화원 소개</p>
+        <h2 class="section-sub-title text-center mb-3"></h2>
       </div>
-      <div style="padding-bottom: 30px;">
-        <table border="0" width="1110px">
-          <tbody align="center">
-            <tr>
-              <td rowspan="3" style="width:80px; height: 40px;
-              border-radius: 50%; background: #f2cb61; font-size: 20px; font-weight: bold;
-              text-align: center;">화</td>
-              <td style="color: #f2cb61; font-weight: bold;">10:00</td>
-              <td style="color: #f2cb61; font-weight: bold;">11:00 ~ 12:00</td>
-              <td style="color: #f2cb61; font-weight: bold;">12:00 ~ 13:00</td>
-              <td style="color: #f2cb61; font-weight: bold;">13:00 ~ 14:00</td>
-              <td style="color: #f2cb61; font-weight: bold;">14:30 ~ 15:30</td>
-              <td style="color: #f2cb61; font-weight: bold;">16:00</td>
-            </tr>
-            <tr style="border-bottom: 1px solid #444; color: #f2cb61; font-weight: bold;">
-              <td>1</td>
-              <td>2</td>
-              <td>3</td>
-              <td>4</td>
-              <td>5</td>
-              <td>6</td>
-            </tr>
-            <tr>
-              <td>고양관광정보센터</td>
-              <td><a href="introduceDay_map.html">
-                  <span style="text-decoration: underline; color: #003399;">
-                    중남미문화원</span></a></td>
-              <td><a href="introduceDay_map.html">
-                  <span style="text-decoration: underline; color: #003399;">
-                    중식 타코체험/체험비 별도</span></a></td>
-              <td><a href="introduceDay_map.html">
-                  <span style="text-decoration: underline; color: #003399;">
-                    고양향교, 벽제관지(경유)</span></a></td>
-              <td><a href="introduceDay_map.html">
-                  <span style="text-decoration: underline; color: #003399;">
-                    최영장군묘</span></a></td>
-              <td>고양관광정보센터</td>
-            </tr>
-          </tbody>
-        </table>
+      <div style="text-align: center; padding-top: 20px; padding-bottom: 20px;">
+        <img src="images/중남미문화원.jpg" width="300px">
+      </div>
+      <div style="padding-bottom: 80px;">
+        <p style="font-weight: bold; font-size: 16px; text-align: center;">
+          중남미문화원</p>
+        <p style="font-size: 16px; padding: 0 80px 0 80px;">뼈 끝에
+          스며들어 가는 열락의 소리다이것은 피어나기 전인 유소년에게서 구하지 못할
+          바이며 시들어 가는 노년에게서 구하지 못할 바이며 오직 우리 청춘에서만 구할 수 있는 것이
+          다 청춘은 인생의 황금시대다 우리는 이 황금시대의 가치를</p>
       </div>
     </div>
   </div>
   <!-- MAP & LIST 영역 끝 -->
-
-  <!-- 본문 제목 & 중간 구분선 -->
-  <div class="container" style="padding-bottom: 20px;">
-    <div class="row justify-content-center">
-      <p style="margin: 0; padding-top: 20px; font-weight: bold; font-size: 20px;">(기본) 탑승료</p>
-    </div>
-    <div class="row justify-content-center">
-      <div class="col-lg-6 text-center">
-        <h2 class="section-title text-center mb-3"></h2>
-      </div>
-    </div>
-  </div>
-  <!-- 본문 제목 & 중간 구분선 끝 -->
-
-  <!-- 본문 요금표 -->
-  <div class="container" style="padding-bottom: 50px;">
-    <div class="row justify-content-center">
-      <table border="1" cellspacin="0">
-        <thead bgcolor="#dcdcdc" align="center" style="font-weight: bold;">
-          <tr>
-            <td>성인</td>
-            <td>기타</td>
-            <td>무료</td>
-          </tr>
-        </thead>
-        <tbody align="center">
-          <tr>
-            <td width="200px">6,000원</td>
-            <td width="200px">4,000원</td>
-            <td width="200px">경로,장애인,<br>유치원~초중고,36개월 미만</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <!-- 본문 요금표 끝 -->
-
-  <!-- 본문 글 -->
-  <div class="container" style="padding-bottom: 50px;">
-    <div class="row justify-content-center">
-      <p style="font-size: 16px; font-weight: bold;">※ 예약을 하시려면 하단의 투어예약 버튼을 눌러주세요</p>
-    </div>
-  </div>
-  <!-- 본문 글 끝 -->
-
-  <!-- 지금 바로 떠나세요! 영역 -->
-  <div class="container">
-    <div style="background: rgba(26, 55, 77, 0.05);">
-      <div style="padding: 20px; display: flex; flex-direction: row;
-      justify-content: space-evenly; align-items: center;">
-        <iframe width="350" height="250" src="https://www.youtube.com/embed/pdBJjNjkZpM" title="YouTube video player"
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
-       picture-in-picture" allowfullscreen></iframe>
-        <div style="padding: 20px; text-align: center; padding-top: 80px;">
-          <p style="font-size: 1.75rem; font-weight: bold;">지금 바로 떠나세요!</p>
-          <br>
-          <p class="mb-0">
-            <a href="#" class="btn btn-outline-white text-white btn-md font-weight-bold"
-              style="background-color: #888888;">
-              투어예약
-            </a>
-          </p>
-        </div>
-        <div>
-          <img src="images/버스사진.jpg" width="350" height="250">
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- 지금 바로 떠나세요! 영역 끝 -->
 
   <div class="site-footer">
     <div class="inner first">
