--- a/introduceDay.html
+++ b/introduceDay.html
@@ -195,16 +195,16 @@
             </tr>
             <tr>
               <td>고양관광정보센터</td>
-              <td><a href="introduceDay_map.html">
+              <td><a href="introduceDay_detail.html">
                   <span style="text-decoration: underline; color: #003399;">
                     중남미문화원</span></a></td>
-              <td><a href="introduceDay_map.html">
+              <td><a href="introduceDay_detail.html">
                   <span style="text-decoration: underline; color: #003399;">
                     중식 타코체험/체험비 별도</span></a></td>
-              <td><a href="introduceDay_map.html">
+              <td><a href="introduceDay_detail.html">
                   <span style="text-decoration: underline; color: #003399;">
                     고양향교, 벽제관지(경유)</span></a></td>
-              <td><a href="introduceDay_map.html">
+              <td><a href="introduceDay_detail.html">
                   <span style="text-decoration: underline; color: #003399;">
                     최영장군묘</span></a></td>
               <td>고양관광정보센터</td>
