0921_list 내용 중 경유지 삭제

--- a/User/user_introduceDay.html
+++ b/User/user_introduceDay.html
@@ -238,10 +238,10 @@
                     중남미문화원</span></a></td>
               <td><a href="user_introduceDay_detail.html">
                   <span style="text-decoration: underline; color:  #168;">
-                    중식 타코체험/체험비 별도</span></a></td>
+                    타코체험/체험비 별도</span></a></td>
               <td><a href="user_introduceDay_detail.html">
                   <span style="text-decoration: underline; color:  #168;">
-                    고양향교, 벽제관지(경유)</span></a></td>
+                    고양향교, 벽제관지</span></a></td>
               <td><a href="user_introduceDay_detail.html">
                   <span style="text-decoration: underline; color:  #168;">
                     최영장군묘</span></a></td>
