--- a/User/user_introduceDay_list.html
+++ b/User/user_introduceDay_list.html
@@ -220,36 +220,26 @@
             </tr>
             <tr height="40px">
               <td>2</td>
-              <td>이동</td>
-              <td>10:30 ~ 11:00</td>
+              <td>중남미문화원</td>
+              <td>10:30 ~ 12:00</td>
             </tr>
             <tr height="40px">
               <td>3</td>
-              <td>중남미문화원</td>
-              <td>11:00 ~ 12:00</td>
-            </tr>
-            <tr height="40px">
-              <td>4</td>
-              <td>중식 타코체험 / 체험비 별도</td>
+              <td>타코체험 / 체험비 별도</td>
               <td>12:00 ~ 13:00</td>
             </tr>
             <tr height="40px">
+              <td>4</td>
+              <td>고양학교, 벽제관지</td>
+              <td>12:00 ~ 14:00</td>
+            </tr>
+            <tr height="40px">
               <td>5</td>
-              <td>고양학교, 벽제관지(경유)</td>
-              <td>13:00 ~ 14:00</td>
+              <td>최영장군묘</td>
+              <td>14:00 ~ 15:30</td>
             </tr>
             <tr height="40px">
               <td>6</td>
-              <td>이동</td>
-              <td>14:00 ~ 14:30</td>
-            </tr>
-            <tr height="40px">
-              <td>7</td>
-              <td>최영장군묘</td>
-              <td>14:30 ~ 15:30</td>
-            </tr>
-            <tr height="40px">
-              <td>8</td>
               <td>도착</td>
               <td>16:00</td>
             </tr>
